fix: Donation buttons without enough contrast on hover

--- a/assets/scss/components/_donation-values.scss
+++ b/assets/scss/components/_donation-values.scss
@@ -45,6 +45,12 @@
   &:visited {
     color: inherit;
   }
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: my.palette('text', 'light');
+  }
 }
 
 .donation-values__value--custom-group {
